--- a/formulario/index.html
+++ b/formulario/index.html
@@ -24,6 +24,10 @@
             <button onclick="calcIMC()">Calcular</button>
         </div>
 
+        <div>
+            <button><a href="https://renan-limas.github.io/aplicacoes/">Voltar</a></button>
+        </div>
+
         <span id="resultado"></span>
     </main>
 
