--- a/controlefinancas/index.html
+++ b/controlefinancas/index.html
@@ -60,7 +60,7 @@
             </table>
         </div>
         <div>
-            <button><a href="https://renan-limas.github.io/aplicacoes/">Voltar</a></button>
+            <button class="btnSmall"><a href="https://renan-limas.github.io/aplicacoes/">Voltar</a></button>
         </div>
     </main>
     
